samples/_failures_safe/1761362158_a05744_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3da22baf.c: In function ‘main’:
./samples/SAFE/__tmp_3da22baf.c:128:5: error: expected declaration or statement at end of input
  128 |     }
      |     ^
